# miniql

./: Cargo.toml  README.md  minidb-backup.sql
src/: main.rs
