[package]
name = "miniql"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.1"
hyper = "0.13"
juniper = { git = "https://github.com/graphql-rust/juniper.git" }
juniper_hyper = { git = "https://github.com/graphql-rust/juniper.git" }
mobc = "0.5"
mobc-postgres = "0.5"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features=["rt-threaded", "macros"] }
tokio-postgres = "0.5"
